--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
     "source": "http://git.hoa-project.net/"
   },
   "require": {
-    "hoa/consistency": "~1.0",
-    "hoa/exception"  : "~1.0"
+    "hoa/consistency": "~2.0"
   },
   "require-dev": {
-    "hoa/test": "~2.0"
+    "hoa/test": "~3.0"
   },
   "autoload": {
     "psr-4": {
@@ -30,7 +29,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.x-dev"
+      "dev-master": "1.x-dev"
     }
   }
 }
